# instarec

./: .gitgnore  .gitignore  LICENSE  README.md  diff.diff  instarec.py  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: publish.yml  test.yaml
config/: credentials.json  session.json
instarec/: cli.py  downloader.py  instagram.py  interactive.py  io.py  live.py  log.py  loss_check.py  merger.py  mpd.py  past.py  progress_bar.py  utils.py
instarec/instagram/: __init__.py  client.py  cookies.py  credentials.py  exceptions.py
tests/: test_cli.py
